unpackaged/main/default/objects/dynl__DynLookup__c/dynl__DynLookup__c.object-meta.xml
<CustomObject>
    <customHelpPage>dynl__NewHelpPage</customHelpPage>
    <description>This object holds the definition for the Lookup</description>
    <label>Dynamic Lookup</label>
    <nameField>
        <displayFormat>Dl - {00}</displayFormat>
        <label>Record Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>