unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Aggregate_Function__c.field-meta.xml
<CustomField>
    <fullName>dynl__Aggregate_Function__c</fullName>
    <inlineHelpText>The aggregate function will be applied on Field Name 2. Select ‘None’ if group by functionality is not needed.</inlineHelpText>
    <label>Aggregate Function For Group By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>