unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Code_to_copy_in_VF_Page__c.field-meta.xml
<CustomField>
    <fullName>dynl__Code_to_copy_in_VF_Page__c</fullName>
    <inlineHelpText>To use this component, copy this code to your VF page</inlineHelpText>
    <label>Code to copy in VF Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>