unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Dynamic_Query__c.field-meta.xml
<CustomField>
    <fullName>dynl__Dynamic_Query__c</fullName>
    <inlineHelpText>Query is constructed based on your inputs in this definition and can be reviewed here</inlineHelpText>
    <label>Dynamic Query</label>
    <type>TextArea</type>
</CustomField>