unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Field_Name_1__c.field-meta.xml
<CustomField>
    <fullName>dynl__Field_Name_1__c</fullName>
    <inlineHelpText>First Field Name of the Object. This field will have the selection link during run time.</inlineHelpText>
    <label>Field Name 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>