unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Group_By__c.field-meta.xml
<CustomField>
    <fullName>dynl__Group_By__c</fullName>
    <inlineHelpText>Provide the Field Name1 if any aggregate function is selected for Field Name 2. Else leave it empty</inlineHelpText>
    <label>Group By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>