unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>dynl__Object_Name__c</fullName>
    <inlineHelpText>Name of the Object from where the Lookup fields will be retrieved</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>