unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Order__c.field-meta.xml
<CustomField>
    <fullName>dynl__Order__c</fullName>
    <inlineHelpText>The records in the Lookup can be ordered either in ascending or descending</inlineHelpText>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>