unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Order_By__c.field-meta.xml
<CustomField>
    <fullName>dynl__Order_By__c</fullName>
    <inlineHelpText>Select the Field name by which the retrieved records will be arranged.</inlineHelpText>
    <label>Order By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>