unpackaged/main/default/objects/dynl__DynLookup__c/fields/dynl__Window_Title__c.field-meta.xml
<CustomField>
    <fullName>dynl__Window_Title__c</fullName>
    <inlineHelpText>Title for the Lookup window. If this is empty, the Lookup name will be used as the Lookup title</inlineHelpText>
    <label>Lookup Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>