unpackaged/main/default/objects/dynl__DynLookup__c/listViews/dynl__All.listView-meta.xml
<ListView>
    <fullName>dynl__All</fullName>
    <columns>NAME</columns>
    <columns>dynl__Name__c</columns>
    <columns>dynl__Object_Name__c</columns>
    <columns>dynl__Field_Name_1__c</columns>
    <columns>dynl__Field_Name_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Lookups</label>
</ListView>